--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@types/node": "18.13.0",
+    "@tiptap/core": "2.0.0-beta.218",
+    "@tiptap/extension-placeholder": "2.0.0-beta.218",
+    "@tiptap/pm": "2.0.0-beta.218",
+    "@tiptap/react": "2.0.0-beta.218",
+    "@tiptap/starter-kit": "2.0.0-beta.218",
+    "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
