--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@tanstack/react-query": "^4.24.10",
     "@tiptap/core": "2.0.0-beta.218",
     "@tiptap/extension-placeholder": "2.0.0-beta.218",
     "@tiptap/pm": "2.0.0-beta.218",
     "@tiptap/react": "2.0.0-beta.218",
     "@tiptap/starter-kit": "2.0.0-beta.218",
+    "@trpc/client": "^10.13.0",
+    "@trpc/next": "^10.13.0",
+    "@trpc/react-query": "^10.13.0",
+    "@trpc/server": "^10.13.0",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -26,7 +31,8 @@
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
