--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.2.3",
+    "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.26.1",
     "@trpc/client": "^10.14.0",
     "@trpc/next": "^10.14.0",
@@ -22,15 +24,18 @@
     "eslint-config-next": "13.2.3",
     "lucide-react": "^0.123.0",
     "next": "13.2.3",
+    "next-auth": "^4.20.1",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superjson": "^1.12.2",
     "typescript": "4.9.5",
     "zod": "^3.21.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7"
   }
 }
