create prisma client and setup page

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.5",
     "superjson": "^1.12.2",
     "typescript": "4.9.5",
     "zod": "^3.21.2"
