--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-hot-toast": "^2.4.0",
     "superjson": "^1.12.2",
     "zod": "^3.21.4"
   },
@@ -35,13 +36,13 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.5",
     "prisma": "^4.11.0",
-    "typescript": "5.0.2",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "typescript": "5.0.2"
   }
 }
