--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
+    "slate": "^0.91.4",
+    "slate-react": "^0.92.0",
     "superjson": "^1.12.2",
     "zod": "^3.21.4"
   },
