--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
-    "slate": "^0.91.4",
-    "slate-react": "^0.92.0",
+    "slate": "^0.60.17",
+    "slate-history": "^0.60.17",
+    "slate-react": "^0.60.17",
     "superjson": "^1.12.2",
     "zod": "^3.21.4"
   },
@@ -38,6 +39,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "postcss": "^8.4.21",
