--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@trpc/next": "^10.16.0",
     "@trpc/react-query": "^10.16.0",
     "@trpc/server": "^10.16.0",
+    "@types/is-hotkey": "^0.1.7",
+    "is-hotkey": "^0.2.0",
     "lucide-react": "^0.125.0",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
@@ -28,9 +30,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-hot-toast": "^2.4.0",
-    "slate": "^0.60.17",
-    "slate-history": "^0.60.17",
-    "slate-react": "^0.60.17",
+    "slate": "^0.91.4",
+    "slate-react": "^0.92.0",
     "superjson": "^1.12.2",
     "zod": "^3.21.4"
   },
@@ -38,8 +39,8 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "^10.4.14",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "postcss": "^8.4.21",
