--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@upstash/redis": "^1.20.2",
     "is-hotkey": "^0.2.0",
     "lucide-react": "^0.129.0",
     "next": "13.2.4",
